# devops-showcase-app

./: .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  compose.yaml  diagram.md  index.yaml  main.py  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  release-drafter.yml
.github/workflows/: build-and-push.yaml  chart-releaser.yaml  ci-tests.yaml  ci.yaml  ci_tests.yaml  e2e-tests.yaml  release-drafter.yaml  unit_tests.yaml
app/: api.py  crud.py  database.py  health.py  main.py  models.py  schemas.py  telemetry.py
app/tests/: test_api.py
app/tests/integration/: conftest.py  test_integration.py
app/tests/unit/: test_api.py
helm/devops-showcase-app/: Chart.yaml  values-prod-example.yaml  values.yaml
helm/sample-app/: Chart.yaml  values-prod-example.yaml  values.yaml
scripts/: e2e-test.sh
