[project]
name = "devops-showcase-app"
version = "0.1.0"
description = "DevOps showcase application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]==0.136.3",
    "sqlmodel==0.0.38",
    "psycopg2-binary==2.9.12",
    "opentelemetry-api==1.35.0",
    "opentelemetry-sdk==1.35.0",
    "opentelemetry-instrumentation-fastapi==0.56b0",
    "opentelemetry-exporter-otlp==1.35.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "loguru==0.7.3",
    "pydantic>=2.13.4",
    "httptools>=0.8.0",
    "grpcio>=1.81.0",
    "uvloop>=0.22.0",
    "rignore>=0.7.6"
]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.3",
    "testcontainers>=4.12.0",
]
