[project]
name = "devops-showcase-app"
version = "0.1.0"
description = "DevOps showcase application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]==0.139.2",
    "sqlmodel==0.0.39",
    "psycopg2-binary==2.9.12",
    "opentelemetry-api==1.43.0",
    "opentelemetry-sdk==1.43.0",
    "opentelemetry-instrumentation-fastapi==0.64b0",
    "opentelemetry-exporter-otlp==1.43.0",
    "prometheus-fastapi-instrumentator==8.0.2",
    "loguru==0.7.3",
    "pydantic>=2.13.4",
    "httptools>=0.8.0",
    "grpcio>=1.83.0",
    "uvloop>=0.22.0",
    "rignore>=0.8.0"
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pytest>=9.1.1",
    "testcontainers>=4.12.0",
]
